...
                            </activityIndicatorView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="EnI-YN-vYL">
                                <rect key="frame" x="104" y="320" width="206" height="256.5"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noSearch" translatesAutoresizingMaskIntoConstraints="NO" id="DEY-yq-gNK">
                                        <rect key="frame" x="18" y="0.0" width="170.5" height="170.5"/>
                                        <accessibility key="accessibilityConfiguration" label="noSearchImage">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="no search found" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Mk-OH-rwh">
                                        <rect key="frame" x="0.0" y="220.5" width="206" height="36"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
...
